--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,7 +28,7 @@ h3,
 h4,
 h5,
 blockquote {
-  font-family: "Trebuchet MS", "Trebuchet MS", "Trebuchet MS", "Trebuchet MS", "Trebuchet MS";
+  font-family: "sans serif", "sans serif", "sans serif", "sans serif", "sans serif";
 }
 
 /*blockquote {
