working on template

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@ input.task-list-item-checkbox {
   margin-right: 4px;
 }
 
-h1,
+/*h1,
 h2,
 h3,
 h4,
@@ -31,7 +31,7 @@ blockquote {
   font-family: "sans serif", "sans serif", "sans serif", "sans serif", "sans serif";
 }
 
-/*blockquote {
+blockquote {
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida,
     "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }*/
