--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,3 +1,8 @@
+<head>
+  <link rel="icon" type="image/x-icon" href="/files/favicon.ico">
+  <title> Alessandro Lonardi | Home </title>
+</head>
+
 ---
 layout: default
 ---
