--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,12 +29,12 @@ input.task-list-item-checkbox {
 }
 
 // Variables
-$color1: #202020;
-$color2: #85ceff;
+$color1: #FAF9F6;
+$color2: #2865de;
 
 body {
   background-color: $color1;
-  color: #f5f5f5; // off-white
+  color: #515151; // off-white
   font-family: Arial, sans-serif;
 }
 
