working with spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,12 +10,16 @@
 
 .markdown-body p {
   font-size: 16px;
-  line-height: 1.3em;
+  line-height: 1.4em;
   margin-bottom: 0.3em;
 }
 
 .markdown-body li {
-  line-height: 1.3em;
+  line-height: 1.4em;
+}
+
+.markdown-body ul {
+  line-height: 1.4em;
 }
 
 input.task-list-item-checkbox {
