--- a/assets/css/custom-markdown.css
+++ b/assets/css/custom-markdown.css
@@ -1,6 +1,3 @@
-/* custom-markdown.css */
-
-/* Hide the link that Foam automatically adds to the header */
-.markdown-preview h1 a {
-    display: none;
+.markdown-preview-view .markdown-preview-section h1 a {
+    display: none !important;
 }
