--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,7 +28,7 @@ input.task-list-item-checkbox {
 
 // Variables
 $color1: #FAF9F6;
-$color2: #2865de;
+$color2: #5580d5;
 
 body {
   background-color: $color1;
