--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,7 +32,7 @@ $color2: #2865de;
 
 body {
   background-color: $color1;
-  color: #515151; // off-white
+  color: #515151; // off-white palette
   font-family: Arial, sans-serif;
   text-decoration: none; // Remove underline
 }
