--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root {
     --page-size: 800px;
     --max-width-percentage: 100%;
+    --button-bg-color: rgb(72, 140, 229);
+    --button-text-color: #FAF9F6;
+;
 }
 
 footer::after {
@@ -14,7 +17,7 @@ body {
     padding: 0;
     line-height: 1.5;
     color: #515151;
-    background-color: white;
+    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -29,7 +32,7 @@ body {
 }
 
 footer {
-    background: white;
+    background: #f5f5f5;
     color: #515151;
     padding: 0.5em 0;
     display: flex;
@@ -49,10 +52,15 @@ ol {
     margin-bottom: 0;
 }
 
-
+li {
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+    margin-left: 0.3%;
+    padding: 0;
+}
 
 nav {
-    background: white;
+    background: #f5f5f5;
     color: #515151;
     padding: 0.5em 0;
     display: flex;
@@ -96,8 +104,8 @@ nav a:hover {
     flex-grow: 1;
     padding: 1.05em;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     flex-direction: column;
     margin-bottom: 0em;
 }
@@ -107,7 +115,7 @@ nav a:hover {
     max-width: 80%;
     height: auto;
     transition: width 0.3s ease;
-    border-radius: 5px;
+    border-radius: 0px;
     margin-bottom: 1em;
 }
 
@@ -146,48 +154,20 @@ nav a:hover {
     object-fit: contain;
 }
 
-.content-pub {
-    width: 100%;
-    max-width: var(--page-size);
-}
-
-.content-pub h2 {
-    margin-bottom: 0.2em;
-    margin-top: 0.2em;
-}
-
-
-content-pub {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-.content-pub p {
-    margin-top: 0;
-}
-
-.content-pub a {
-    color: #1a73e8;
-    text-decoration: none;
-}
-
-.content-pub a:hover {
-    text-decoration: underline;
-}
-
-.content {
-    width: 100%;
-    max-width: var(--page-size);
-}
-
-.content h2 {
-    margin-bottom: 0.2em;
-    margin-top: 0.5em;
-}
 
 content {
     margin-top: 0;
     margin-bottom: 0;
+    width: 100%;
+    max-width: var(--page-size);
+
 }
+
+.content h2 {
+    margin-bottom: 0.3em;
+    margin-top: 0.3em;
+}
+
 .content p {
     margin-top: 0;
 }
@@ -207,7 +187,7 @@ ul {
 }
 
 p {
-    margin-bottom: 0;
+    margin-bottom: 0.4em;
     margin-top: 0.4em;
     text-align: left;
     hyphens: auto;
