--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --page-size: 800px;
+    --page-size: 650px;
     --max-width-percentage: 100%;
     --button-bg-color: rgb(72, 140, 229);
-    --button-text-color: #FAF9F6;
+    --button-text-color: #FBFBFB;
 ;
 }
 
@@ -15,13 +15,14 @@ body {
     margin: 0;
     height: 100%;
     padding: 0;
-    line-height: 1.5;
-    color: #515151;
-    background-color: #f5f5f5;
+    line-height: 1.5em;
+    color: #585858;
+    background-color: #FBFBFB;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     align-items: center;
+    font-size: 16px;
 }
 
 .page {
@@ -32,8 +33,8 @@ body {
 }
 
 footer {
-    background: #f5f5f5;
-    color: #515151;
+    background: #FBFBFB;
+    color: #585858;
     padding: 0.5em 0;
     display: flex;
     justify-content: center;
@@ -48,20 +49,21 @@ footer {
 }
 
 ol {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 0.0em;
+    margin-bottom: 0.0em;
 }
-
+    
 li {
-    margin-top: 0.2em;
-    margin-bottom: 0.2em;
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
     margin-left: 0.3%;
     padding: 0;
 }
 
+
 nav {
-    background: #f5f5f5;
-    color: #515151;
+    background: #FBFBFB;
+    color: #585858;
     padding: 0.5em 0;
     display: flex;
     justify-content: center;
@@ -102,7 +104,7 @@ nav a:hover {
 
 .container {
     flex-grow: 1;
-    padding: 1.05em;
+    padding: 1.05em 1.05em 0.5em 1.05em;
     display: flex;
     justify-content: left;
     align-items: left;
@@ -111,9 +113,19 @@ nav a:hover {
 }
 
 .responsive-image {
-    width: 40%;
-    max-width: 80%;
+    width: 45%;
+    max-width: 60%;
     height: auto;
+    transition: width 0.3s ease;
+    border-radius: 0px;
+    margin-bottom: 1em;
+    margin-top: 0.4em;
+}
+
+iframe {
+    width: 60%;
+    height: 60%;
+    max-width: 60%;
     transition: width 0.3s ease;
     border-radius: 0px;
     margin-bottom: 1em;
@@ -140,21 +152,6 @@ nav a:hover {
     margin-bottom: 0.5em;
 }
 
-.contact-info p a i, 
-.contact-info p a .bluesky-icon {
-    font-size: 1.5rem;
-    width: 1.5rem;
-    height: 1.5rem;
-    vertical-align: middle;
-    color: rgb(26, 115, 232);
-    filter: invert(20%) sepia(100%) saturate(1500%) hue-rotate(190deg) brightness(90%) contrast(90%);
-}
-
-.bluesky-icon {
-    object-fit: contain;
-}
-
-
 content {
     margin-top: 0;
     margin-bottom: 0;
@@ -164,8 +161,8 @@ content {
 }
 
 .content h2 {
-    margin-bottom: 0.3em;
-    margin-top: 0.3em;
+    margin-bottom: 0.5em;
+    margin-top: 1.0em;
 }
 
 .content p {
@@ -194,7 +191,7 @@ p {
     max-width: 100%;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 750px) {
     .responsive-image {
         width: 100%;
     }
