--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     margin: 0;
     height: 100%;
     padding: 0;
