--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ footer::after {
 }
 
 html {
-        overflow-y: scroll;
+    overflow-y: scroll;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     margin: 0;
     height: 100%;
     padding: 0;
@@ -60,7 +60,7 @@ ol {
     margin-left: 1.5em;
     padding: 0;
 }
-    
+
 li {
     margin-top: 0.0em;
     margin-bottom: 0.0em;
@@ -87,6 +87,7 @@ nav {
     top: 0;
     z-index: 10;
 }
+
 nav a {
     color: rgb(26, 115, 232);
     text-decoration: none;
