--- a/style.css
+++ b/style.css
@@ -190,3 +190,11 @@ h3 {
     margin-bottom: 0;
     margin-top: 0;
 }
+
+.highlighted {
+    border: 1px solid rgb(72, 140, 229);
+    background-color: None;
+    border-radius: 4px;
+    padding: 8px;
+    transition: border 0s ease-in-out;
+}
